--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,5 +18,9 @@
             </ul>
 		</div>
 	</div>
+    <script type="text/javascript">
+    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fc26d2a59ae273883cab506a9ab852d4e' type='text/javascript'%3E%3C/script%3E"));
+    </script>
 </body>
 </html>
